--- a/src/index.html
+++ b/src/index.html
@@ -71,6 +71,8 @@
         </p>
     </div>
 
+    <h1>Site is under construction... You will get appsec best practices soon...</h1>
+
 </div> <!-- /container -->
 
 
